Added View Site Functionality for Restaurant and InterGreen

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 <h2>InterGreen</h2>
                 <p>This is the Web Design template InterGreen created by me for the Jackson Coding Academy. The main thing I learned working on this project was the bootstrap grid system along with the bootstrap nav classes.</p>
                 <a href="https://github.com/EthanOxley/InterGreen">View on GitHub</a>
+                <a href="https://ethanoxley.github.io/InterGreen/">View Site</a>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -93,6 +94,7 @@
                 <h2>Restaurant</h2>
                 <p>This is a Restaurant Web Design template created by me for the Jackson Coding Academy. It's main feature's are the website's inner pages (About, FAQ, ETC) and the image carousel.</p>
                 <a href="https://github.com/EthanOxley/Restaurant">View on GitHub</a>
+                <a href="https://ethanoxley.github.io/Restaurant/">View Site</a>
             </div>
             <div class="col-6">
                 <img class="w-100" src="Restaurant.PNG" alt="Project Preview">
