Typo in bottom nav

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <a class="nav-link" href="https://mail.google.com/">Gmail</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://github.com/EthanOxley">Gmail</a>
+                <a class="nav-link" href="https://github.com/EthanOxley">GitHub</a>
             </li>
         </ul>
     </nav>
