Added links to project images

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
     <div class="container-fluid bg-light">
         <div class="row justify-content-center">
             <div class="col-6">
-                <img class="w-100" src="InterGreen.PNG" alt="Project Preview">
+                <a href="https://ethanoxley.github.io/InterGreen/">
+                    <img class="w-100" src="InterGreen.PNG" alt="Project Preview">
+                </a>
             </div>
             <div class="col-6">
                 <h2>InterGreen</h2>
@@ -97,7 +99,9 @@
                 <a href="https://ethanoxley.github.io/Restaurant/">View Site</a>
             </div>
             <div class="col-6">
-                <img class="w-100" src="Restaurant.PNG" alt="Project Preview">
+                <a href="https://ethanoxley.github.io/Restaurant/">
+                    <img class="w-100" src="Restaurant.PNG" alt="Project Preview">
+                </a>
             </div>
         </div>
     </div>
