--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="https://www.linkedin.com/in/ethan-oxley-b165341b3/">LinkedIn</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://mail.google.com/">Gmail</a>
+                    <a class="nav-link" href="mailto:ethanoxley133@gmail.com">Gmail</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://github.com/EthanOxley">GitHub</a>
@@ -182,7 +182,7 @@
                 <a class="nav-link" href="https://www.linkedin.com/in/ethan-oxley-b165341b3/">LinkedIn</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://mail.google.com/">Gmail</a>
+                <a class="nav-link" href="mailto:ethanoxley133@gmail.com">Gmail</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="https://github.com/EthanOxley">GitHub</a>
