Headshot touchup, Project Description edits, Work experience edits

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <div class="col-6">
                 <h2>InterGreen</h2>
-                <p>This is the Web Design template InterGreen created by me for the Jackson Coding Academy. The main thing I learned working on this project was the bootstrap grid system along with the bootstrap nav classes.</p>
+                <p>This is the Web Design template InterGreen that I have been working on for the Jackson Coding Academy. Working on this project taught me a lot about working with Bootstrap 4's classes and grid system, and how to create a site from a mobile first approach.</p>
                 <a href="https://github.com/EthanOxley/InterGreen">View on GitHub</a>
                 <a href="https://ethanoxley.github.io/InterGreen/">View Site</a>
             </div>
@@ -94,7 +94,7 @@
         <div class="row justify-content-center">
             <div class="col-6">
                 <h2>Restaurant</h2>
-                <p>This is a Restaurant Web Design template created by me for the Jackson Coding Academy. It's main feature's are the website's inner pages (About, FAQ, ETC) and the image carousel.</p>
+                <p>This is a Restaurant Web Design template that I have been working on for the Jackson Coding Academy. This project helped me understand how to properly implement image carousel's into my webpages using Bootsrap 4 along with linking multiple webpages together.</p>
                 <a href="https://github.com/EthanOxley/Restaurant">View on GitHub</a>
                 <a href="https://ethanoxley.github.io/Restaurant/">View Site</a>
             </div>
@@ -127,12 +127,12 @@
             <div class="col">
                 <ul>
                     <li>Attended Jackson Prepatory School from 2011-2017</li>
-                    <li>Learned Web Development using HTML, CSS, and a small amount of JS at Holmes Community College</li>
+                    <li>Learned Web Development using HTML and CSS at Holmes Community College</li>
                 </ul>
             </div>
             <div class="col">
                 <ul>
-                    <li>Recieved Certification as a VR Developer in Unreal Engine 4 from Lobaki</li>
+                    <li>Recieved Certification as a VR Developer in Unreal Engine 4 from Lobaki XR Academy</li>
                     <li>Currently Enrolled in the Jackson Coding Academy</li>
                 </ul>
             </div>
@@ -164,7 +164,7 @@
             </div>
             <div class="col">
                 <ul>
-                    <li>During the Lobaki VR Academy I worked on a VR project with multiple other developers. The goal of this project was to recreate a real life warehouse working environment inside of VR. The purpose of this was to use this VR environment to help future workers with their OSHA training. Working on this project introduced me to working on a team of multiple developers and sharing work through the cloud.</li>
+                    <li>During the Lobaki XR Academy I worked on a VR project with multiple other developers. The goal of this project was to recreate an average workday for warehouse floor workers to assist in the completion of their OSHA training. Working on this project was my first introduction to working on a development team which taught me how developers were expected to approach and accomplish their tasks.</li>
                 </ul>
             </div>
         </div>
