--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container-fluid bg-light">
         <div class="row justify-content-between align-items-right">    
             <div class=col-3>
-                <img class="w-100 headshotimg" src="headshot1.jpg" alt="Picture of Ethan">
+                <img class="rounded-circle w-100 headshotimg" src="headshot1.jpg" alt="Picture of Ethan">
             </div>
             <div class="col-6 abouttext">
                 <p> My name is Ethan Oxley and I am an aspiring Junior Developer looking to pursue a career in game development. Currently I am enrolled in the Jackson Coding Academy studying to become a Full Stack Developer. I hope to take what I learn at the Academy and the experience I already have to create products that people will enjoy for years to come. </p>
