--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <img class="rounded-circle w-100 headshotimg" src="headshot1.jpg" alt="Picture of Ethan">
             </div>
             <div class="col-6 abouttext">
-                <p> My name is Ethan Oxley and I am an aspiring Junior Developer looking to pursue a career in game development. Currently I am enrolled in the Jackson Coding Academy studying to become a Full Stack Developer. I hope to take what I learn at the Academy and the experience I already have to create products that people will enjoy for years to come. </p>
+                <p> Welcome to my Portfolio Preview Page, my name is Ethan Oxley and I am an aspiring Junior Developer currently enrolled In the Jackson Coding Academy. I have had a lifelong passion for computers which eventually grew into a love for programming and gaming. Last summer I completed the Lobaki XR Academy which was an amazing oportunity to get my hands on and work with powerful game development and XR tools. I hope to take what I learn through both of these organizations to pursue a career in game development and machine learning. </p>
             </div>
         </div>
     </div>
