Adding Income Rush to Portfolio plus minor code markup

--- a/index.html
+++ b/index.html
@@ -103,6 +103,19 @@
                     <img class="w-100" src="Restaurant.PNG" alt="Project Preview">
                 </a>
             </div>
+        <div class="row justify-content-center">
+                <div class="col-6">
+                    <a href="https://ethanoxley.github.io/IncomeRush/">
+                        <img class="w-100" src="IncomeRush.png" alt="Project Preview">
+                    </a>
+                </div>
+                <div class="col-6">
+                    <h2>Income Rush</h2>
+                    <p>A simple web-based game built using JavaScript to dynamically interact with HTML elements. Pick between sending 10 unique and increasingly powerful units to increase your income and overwhelm the enemy across 10 different stages.</p>
+                    <a href="https://github.com/EthanOxley/IncomeRush">View on GitHub</a>
+                    <a href="https://ethanoxley.github.io/IncomeRush">View Site</a>
+                </div>
+            </div>
         </div>
     </div>
 
